[chromium] Animations waiting for a synchronized start time should never be marked finished. https://bugs.webkit.org/show_bug.cgi?id=84519

Patch by Ian Vollick <vollick@chromium.org> on 2012-04-25
Reviewed by James Robinson.

Source/WebCore:

Tested in CCLayerAnimationControllerTest.AnimationsWaitingForStartTimeDoNotFinishIfTheyWaitLongerToStartThanTheirDuration

* platform/graphics/chromium/cc/CCLayerAnimationController.cpp:
(WebCore::CCLayerAnimationController::tickAnimations):

Source/WebKit/chromium:

* tests/CCLayerAnimationControllerTest.cpp:
(WebKitTests::TEST):
(WebKitTests):

Canonical link: https://commits.webkit.org/102356@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115202 268f45cc-cd09-0410-ab3c-d52691b4dbfc